flex instead of table, for navigation bar

--- a/config/navigate.html
+++ b/config/navigate.html
@@ -1,4 +1,5 @@
-<div>
+<div class="navigation-bar">
+  <!--
   <table class="navigate">
     <tr>
       <td align="left">
@@ -12,4 +13,8 @@
       </td>
     </tr>
   </table>
+  -->
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
