--- a/site/message-queue-blues.html
+++ b/site/message-queue-blues.html
@@ -33,7 +33,8 @@
 
 <body>
 
-<div>
+<div class="navigation-bar">
+  <!--
   <table class="navigate">
     <tr>
       <td align="left">
@@ -47,6 +48,10 @@
       </td>
     </tr>
   </table>
+  -->
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
@@ -190,7 +195,8 @@ the establishment or reestablishment of a broker.</p>
 <p>TODO Mention the <code>mq</code> repository.</p>
 
 
-<div>
+<div class="navigation-bar">
+  <!--
   <table class="navigate">
     <tr>
       <td align="left">
@@ -204,6 +210,10 @@ the establishment or reestablishment of a broker.</p>
       </td>
     </tr>
   </table>
+  -->
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
