--- a/site/posts.html
+++ b/site/posts.html
@@ -33,7 +33,8 @@
 
 <body>
 
-<div>
+<div class="navigation-bar">
+  <!--
   <table class="navigate">
     <tr>
       <td align="left">
@@ -47,6 +48,10 @@
       </td>
     </tr>
   </table>
+  -->
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
@@ -184,7 +189,8 @@
     </table>
     
 
-<div>
+<div class="navigation-bar">
+  <!--
   <table class="navigate">
     <tr>
       <td align="left">
@@ -198,6 +204,10 @@
       </td>
     </tr>
   </table>
+  -->
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
