--- a/site/phone-server.html
+++ b/site/phone-server.html
@@ -26,20 +26,11 @@
 
 <body>
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
@@ -270,20 +261,11 @@ server, chewing up CPU cycles looking for possible signals in
 <p>So, hack around with your phone! It's fun, and you might learn something.</p>
 
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
