--- a/site/russia/russia1.html
+++ b/site/russia/russia1.html
@@ -26,20 +26,11 @@
 
 <body>
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
@@ -194,20 +185,11 @@ writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
   </tr>
 </table>
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
