--- a/site/thrush.html
+++ b/site/thrush.html
@@ -26,20 +26,11 @@
 
 <body>
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
@@ -195,20 +186,11 @@ auto thrush(Value&amp;&amp; value, Func&amp;&amp; func, Funcs&amp;&amp;... funcs
 <p>What about in <a href="https://golang.org/">Go</a>?  Forget it.</p>
 
 
-<div>
-  <table class="navigate">
-    <tr>
-      <td align="left">
-        <a href="/site/posts.html">Posts</a>
-      </td>
-      <td align="center">
-        <a href="https://www.github.com/dgoffredo">About</a>
-      </td>
-      <td align="right">
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
+<div class="navigation-bar">
+  
+    <a href="/site/posts.html">Posts</a>
+    <a href="https://github.com/dgoffredo">About</a>
+    <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
 
 
