do thumbnail linking during the build, not as a client script

--- a/site/message-queue-blues.html
+++ b/site/message-queue-blues.html
@@ -1,32 +1,22 @@
-
 <html>
-<!-- Note that this is actually XML. I omit the XHTML-required "!DOC" stuff,
-     though, because I found that it caused browsers to ignore CSS's max-width
-     style. -->
+
 <head>
   <meta charset="UTF-8" />
 
   <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
 
-  <!-- style for landscape orientation, e.g. desktop browser -->
-  <link rel="stylesheet" type="text/css"
-      media="(orientation: landscape)"
-      href="/site/landscape.css" />
+  
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/site/landscape.css" />
 
-  <!-- style for portrait orientation, e.g. mobile browser -->
-  <link rel="stylesheet" type="text/css"
-      media="(orientation: portrait)"
-      href="/site/portrait.css" />
+  
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/site/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
-  <!-- The space character prevents etree from omitting the closing tag. -->
+  
   <script src="/highlightjs/highlight.pack.js"> </script>
 
   <script>hljs.initHighlightingOnLoad();</script>
-
-  <!-- The space character prevents etree from omitting the closing tag. -->
-  <script src="/site/linkify.js"> </script>
 
   <title>Message Queue Blues</title>
 </head>
@@ -42,7 +32,7 @@
 
 
 
-<div class="table-of-contents"></div>
+<div class="table-of-contents" />
 
 <h1>Message Queue Blues</h1>
 <p>Imagine a portable, local, available, and minimal message queue: like a file or
