--- a/site/mexico/mexico2.html
+++ b/site/mexico/mexico2.html
@@ -18,9 +18,6 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
-  
-  <script src="/site/linkify.js"> </script>
-
   <title>Mexico, Day 8</title>
 </head>
 
@@ -38,38 +35,38 @@
 <div class="table-of-contents"><ul><li><a href="#mexico_day_8">Mexico, Day 8</a></li></ul></div>
 
 <h1 id="mexico_day_8">Mexico, Day 8</h1>
-<p><img src="mexico_5_small.jpg" alt="" /> </p>
-<p><img src="mexico_6_small.jpg" alt="" /> </p>
+<p><a href="mexico_5.jpg"><img src="mexico_5_small.jpg" alt="" /> </a></p>
+<p><a href="mexico_6.jpg"><img src="mexico_6_small.jpg" alt="" /> </a></p>
 <p>I haven't done my own laundry in a while. In this arid climate, you hardly
 even need to hang the clothes to dry.</p>
-<p><img src="mexico_7_small.jpg" alt="" /> </p>
-<p><img src="mexico_8_small.jpg" alt="" /> </p>
+<p><a href="mexico_7.jpg"><img src="mexico_7_small.jpg" alt="" /> </a></p>
+<p><a href="mexico_8.jpg"><img src="mexico_8_small.jpg" alt="" /> </a></p>
 <p>The salmon came out well.  Luxurious though this stove may be, its lowest
 setting is more flame than I'd like, so I'm learning how not to burn things.</p>
-<p><img src="mexico_9_small.jpg" alt="" /> </p>
+<p><a href="mexico_9.jpg"><img src="mexico_9_small.jpg" alt="" /> </a></p>
 <p>Grace and I ubered downtown in the afternoon to check things out. My
 favorite moment was when we sat at a small cafe table outside in a "codo" of
 shops under the shade of some large trees. I don't have a picture of it. I
 had a small vanilla ice cream and Grace had <a href="https://en.wikipedia.org/wiki/Churro">churros</a>.  Grace managed to
 get pooped on by one of the birds above. She was momentarily inconsolable.</p>
-<p><img src="mexico_10_small.jpg" alt="" /> </p>
-<p><img src="mexico_11_small.jpg" alt="" /> </p>
-<p><img src="mexico_12_small.jpg" alt="" /> </p>
-<p><img src="mexico_13_small.jpg" alt="" /> </p>
+<p><a href="mexico_10.jpg"><img src="mexico_10_small.jpg" alt="" /> </a></p>
+<p><a href="mexico_11.jpg"><img src="mexico_11_small.jpg" alt="" /> </a></p>
+<p><a href="mexico_12.jpg"><img src="mexico_12_small.jpg" alt="" /> </a></p>
+<p><a href="mexico_13.jpg"><img src="mexico_13_small.jpg" alt="" /> </a></p>
 <p>After downtown, we had a 5:00 dinner date with Grace's parents. The menu was
 <a href="https://en.wikipedia.org/wiki/Carne_asada">carne asada</a> and "tacos gorda," an invention of Grace's.  They call her
 "Gorda" because she was a fat baby, and because Mexicans have a habit of
 choosing contrary nicknames.</p>
-<p><img src="mexico_14_small.jpg" alt="" /> </p>
+<p><a href="mexico_14.jpg"><img src="mexico_14_small.jpg" alt="" /> </a></p>
 <p>Tacos Gorda contain slices carne asada with grilled buttered potatoes and carmelized onions, together in a tortilla with <a href="https://en.wikipedia.org/wiki/Salsa_verde">salsa verde</a>.  They're so good.</p>
 <p>After some wine and some beer, we switched to tequila.  Things got festive.
 This is how Grace's mother, Graciela, reacts when you point a camera at her
 and say "¡Oye, bonita!"</p>
-<p><img src="mexico_15_small.jpg" alt="" /> </p>
+<p><a href="mexico_15.jpg"><img src="mexico_15_small.jpg" alt="" /> </a></p>
 <p>Here she is with her husband, Manuel.</p>
-<p><img src="mexico_16_small.jpg" alt="" /> </p>
+<p><a href="mexico_16.jpg"><img src="mexico_16_small.jpg" alt="" /> </a></p>
 <p>Here's Grace and yours truly.</p>
-<p><img src="mexico_17_small.jpg" alt="" /> </p>
+<p><a href="mexico_17.jpg"><img src="mexico_17_small.jpg" alt="" /> </a></p>
 <p>After dinner, we put away the picnic table and moved into the kitchen to play
 dominoes.  Can you believe that I'd never played before?  There was more
 tequila, or as Grace called it, "truth serum."  Grace's mom is quick with
@@ -81,7 +78,7 @@ listening to Grace's newly bought The Police vinyls, and then a round of
 <a href="https://en.wikipedia.org/wiki/Pictionary">Pictionary</a>.  I like them.</p>
 <p>Try playing Pictionary in Spanish.</p>
 <p>I will not run out of water.</p>
-<p><img src="mexico_18_small.jpg" alt="" /> </p>
+<p><a href="mexico_18.jpg"><img src="mexico_18_small.jpg" alt="" /> </a></p>
 <p>¡Hasta la proxima vez!</p>
 <table class="series">
   <tr><th colspan="5">Mexico</th></tr>
