--- a/site/europe/europe1.html
+++ b/site/europe/europe1.html
@@ -18,9 +18,6 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
-  
-  <script src="/site/linkify.js"> </script>
-
   <title>Europe, Day 1</title>
 </head>
 
@@ -38,8 +35,8 @@
 <div class="table-of-contents"><ul><li><a href="#europe_day_1">Europe, Day 1</a></li></ul></div>
 
 <h1 id="europe_day_1">Europe, Day 1</h1>
-<p><img src="vineet_ice_small.jpg" alt="" />
-<em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
+<p><a href="vineet_ice.jpg"><img src="vineet_ice_small.jpg" alt="" />
+</a><em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
 <p>Morning from the North,</p>
 <p>Vineet and I got in just before midnight Iceland time last night. Immigration
 was about five seconds in and out, and there was no customs. I bought some of
