--- a/site/mexico/mexico1.html
+++ b/site/mexico/mexico1.html
@@ -18,9 +18,6 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
-  
-  <script src="/site/linkify.js"> </script>
-
   <title>Mexico, Day 5</title>
 </head>
 
@@ -38,7 +35,7 @@
 <div class="table-of-contents"><ul><li><a href="#mexico_day_5">Mexico, Day 5</a></li></ul></div>
 
 <h1 id="mexico_day_5">Mexico, Day 5</h1>
-<p><img src="mexico_1_small.jpg" alt="" /></p>
+<p><a href="mexico_1.jpg"><img src="mexico_1_small.jpg" alt="" /></a></p>
 <p>An electric fence tops the walls surrounding my neighborhood.  Presumably
 this is to keep bad people out, but I can't leave unless the man at the gate
 allows it.  Then again, he is unarmed, and short, and friendly.</p>
@@ -50,13 +47,13 @@ my sunny three bedroom house inside the castle walls, occasionally venturing
 out to a restaurant or cafe. There's a big screen TV and a 1000-piece
 puzzle. I'm becoming fond of my morning ritual of coffee and computer in the
 backyard.</p>
-<p><img src="mexico_2_small.jpg" alt="" /></p>
+<p><a href="mexico_2.jpg"><img src="mexico_2_small.jpg" alt="" /></a></p>
 <p>Bottled water is the way to go, but for making coffee you can get away with
 boiling the tap for a while.  Once the water cools, there's a slick of
 precipitated minerals on top, and it smells slightly of sulfur.  No wonder
 the coffee tasted bland; this morning I used bottled water and it was much
 improved.</p>
-<p><img src="mexico_3_small.jpg" alt="" /></p>
+<p><a href="mexico_3.jpg"><img src="mexico_3_small.jpg" alt="" /></a></p>
 <p>I didn't realize until yesterday that Aguascalientes sits at an elevation of
 over 6000 feet (1888 meters).  I've been to Aspen before, where altitude
 sickness is unavoidable, whereas here I just felt a little winded and thirsty.</p>
@@ -76,7 +73,7 @@ eating food, basically. Welcome to Mexico.</p>
 recipe.  Then later we'll take a walk downtown.  Originally I planned to stay
 for a week or two, but now I'm staying for a month.  For $40 per day, where
 else would I be?  Hasta luego...</p>
-<p><img src="mexico_4_small.jpg" alt="" /></p>
+<p><a href="mexico_4.jpg"><img src="mexico_4_small.jpg" alt="" /></a></p>
 <table class="series">
   <tr><th colspan="5">Mexico</th></tr>
   <tr>
