support for series of posts

--- a/site/callbacks2.html
+++ b/site/callbacks2.html
@@ -188,6 +188,8 @@ void DatabaseAccessor::asyncQuery(const std::string_view&amp; query,
 inside-out bind.  Six lines of C++11 is what it is.</p>
 
 
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Callbacks</div><div class="series-navigation-links"><a href="callbacks.html">Part 1</a><span>Part 2</span></div></div></div>
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
