--- a/site/channels.html
+++ b/site/channels.html
@@ -760,6 +760,8 @@ library, I think that it's justified.</p>
 <a href="https://github.com/dgoffredo/chan#more">get started</a> playing with C++ channels and see how you like it.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
