--- a/site/europe/europe10.html
+++ b/site/europe/europe10.html
@@ -120,17 +120,9 @@ the Basilica, don't you?</p>
 <p>Now it's a just-under three-hour flight to Stockholm, where presumably we will
 eat meatballs and shop for furniture. The snack guy is coming around I NEED
 COFFEE.</p>
-<table class="series">
-  <tr><th colspan="6">Europe</th></tr>
-  <tr>
-    <td><a href="europe1.html">Day 1</a></td>
-    <td><a href="europe2.html">Day 2</a></td>
-    <td><a href="europe7.html">Day 7</a></td>
-    <td><a href="europe8.html">Day 8</a></td>
-    <td>Day 10</td>
-    <td><a href="europe13.html">Day 13</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><a href="europe2.html">Day 2</a><a href="europe7.html">Day 7</a><a href="europe8.html">Day 8</a><span>Day 10</span><a href="europe13.html">Day 13</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
