--- a/site/europe/europe2.html
+++ b/site/europe/europe2.html
@@ -85,17 +85,9 @@ and then we're LONDON BOUND.</p>
 <em>[2020 note: my God, look at the cock on that one.]</em></p>
 <p>These are the true Icelanders. The humans are kept alive only to act as
 caretakers in their intergalactic communist utopia.</p>
-<table class="series">
-  <tr><th colspan="6">Europe</th></tr>
-  <tr>
-    <td><a href="europe1.html">Day 1</a></td>
-    <td>Day 2</td>
-    <td><a href="europe7.html">Day 7</a></td>
-    <td><a href="europe8.html">Day 8</a></td>
-    <td><a href="europe10.html">Day 10</a></td>
-    <td><a href="europe13.html">Day 13</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><span>Day 2</span><a href="europe7.html">Day 7</a><a href="europe8.html">Day 8</a><a href="europe10.html">Day 10</a><a href="europe13.html">Day 13</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
