--- a/site/europe/europe7.html
+++ b/site/europe/europe7.html
@@ -75,17 +75,9 @@ observed the Roman god of wine dancing with his panther, as only the Roman god
 of wine can:</p>
 <p><a href="europe7-11.jpg"><img src="europe7-11_small.jpg" alt="" /></a></p>
 <p>Vamos a Madrid!</p>
-<table class="series">
-  <tr><th colspan="6">Europe</th></tr>
-  <tr>
-    <td><a href="europe1.html">Day 1</a></td>
-    <td><a href="europe2.html">Day 2</a></td>
-    <td>Day 7</td>
-    <td><a href="europe8.html">Day 8</a></td>
-    <td><a href="europe10.html">Day 10</a></td>
-    <td><a href="europe13.html">Day 13</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><a href="europe2.html">Day 2</a><span>Day 7</span><a href="europe8.html">Day 8</a><a href="europe10.html">Day 10</a><a href="europe13.html">Day 13</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
