--- a/site/europe/europe8.html
+++ b/site/europe/europe8.html
@@ -117,17 +117,9 @@ Witch King of Leon.</p>
 department, but they make a good effort:</p>
 <p><a href="europe8-017.jpg"><img src="europe8-017_small.jpg" alt="" /></a></p>
 <p>Tomorrow it’s off to Barcelona. Buenas noches.</p>
-<table class="series">
-  <tr><th colspan="6">Europe</th></tr>
-  <tr>
-    <td><a href="europe1.html">Day 1</a></td>
-    <td><a href="europe2.html">Day 2</a></td>
-    <td><a href="europe7.html">Day 7</a></td>
-    <td>Day 8</td>
-    <td><a href="europe10.html">Day 10</a></td>
-    <td><a href="europe13.html">Day 13</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><a href="europe2.html">Day 2</a><a href="europe7.html">Day 7</a><span>Day 8</span><a href="europe10.html">Day 10</a><a href="europe13.html">Day 13</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
