--- a/site/india/india3.html
+++ b/site/india/india3.html
@@ -123,17 +123,9 @@ seemed oddly interested in keeping far away from our driver.</p>
 be our last drive with him.</p>
 <p><a href="india3_26.jpg"><img src="india3_26_small.jpg" alt="" /></a></p>
 <p>Thanks for the jungle juice.</p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td><a href="india1.html">Day 1</a></td>
-    <td><a href="india2.html">Day 6</a></td>
-    <td>Day 8</td>
-    <td><a href="india4.html">Day 10</a></td>
-    <td><a href="india5.html">Day 13</a></td>
-    <td><a href="india6.html">Day 15</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><a href="india2.html">Day 6</a><span>Day 8</span><a href="india4.html">Day 10</a><a href="india5.html">Day 13</a><a href="india6.html">Day 15</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
