--- a/site/india/india5.html
+++ b/site/india/india5.html
@@ -121,17 +121,9 @@ midnight, drank some water, and slept again until 6 AM.</p>
 <p><a href="india5_83.jpg"><img src="india5_83_small.jpg" alt="" /></a></p>
 <p>Then it was another five hour drive, this time into the backwaters.</p>
 <p><img style="width: 200px;" src="hindi.png" /></p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td><a href="india1.html">Day 1</a></td>
-    <td><a href="india2.html">Day 6</a></td>
-    <td><a href="india3.html">Day 8</a></td>
-    <td><a href="india4.html">Day 10</a></td>
-    <td>Day 13</td>
-    <td><a href="india6.html">Day 15</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><a href="india2.html">Day 6</a><a href="india3.html">Day 8</a><a href="india4.html">Day 10</a><span>Day 13</span><a href="india6.html">Day 15</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
