--- a/site/language-notes.html
+++ b/site/language-notes.html
@@ -200,6 +200,8 @@ my head (and nobody else's).</li>
 </ul>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
