--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -388,6 +388,8 @@ its work before calling the <a href="https://github.com/dgoffredo/llama/commit/f
 opening the <a href="https://github.com/dgoffredo/llama#using-the-playground">playground</a> in a web browser.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
