--- a/site/message-queue-blues.html
+++ b/site/message-queue-blues.html
@@ -170,6 +170,8 @@ the establishment or reestablishment of a broker.</p>
 <p>TODO Mention the <code>mq</code> repository.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
