--- a/site/mexico/mexico3.html
+++ b/site/mexico/mexico3.html
@@ -87,16 +87,9 @@ salty, and savory goodness.  Grace's favorite is on mango.</p>
 <p><a href="mexico_34.jpg"><img src="mexico_34_small.jpg" alt="" /></a></p>
 <p>Speaking of food, it's one o'clock here and I haven't eaten today.  Let's put
 that microwave to use.  ¡Adios!</p>
-<table class="series">
-  <tr><th colspan="5">Mexico</th></tr>
-  <tr>
-    <td><a href="mexico1.html">Day 5</a></td>
-    <td><a href="mexico2.html">Day 8</a></td>
-    <td>Day 13</td>
-    <td><a href="mexico4.html">Day 21</a></td>
-    <td><a href="mexico5.html">Day 29</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Mexico</div><div class="series-navigation-links"><a href="mexico1.html">Day 5</a><a href="mexico2.html">Day 8</a><span>Day 13</span><a href="mexico4.html">Day 21</a><a href="mexico5.html">Day 29</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
