--- a/site/mexico/mexico5.html
+++ b/site/mexico/mexico5.html
@@ -83,16 +83,9 @@ Except the pepper.  Grace's mom got the pepper.</p>
 <p>We in no way finished the puzzle.</p>
 <p><a href="mexico_62.jpg"><img src="mexico_62_small.jpg" alt="" /> </a></p>
 <p>Ahora, a Nueva York.</p>
-<table class="series">
-  <tr><th colspan="5">Mexico</th></tr>
-  <tr>
-    <td><a href="mexico1.html">Day 5</a></td>
-    <td><a href="mexico2.html">Day 8</a></td>
-    <td><a href="mexico3.html">Day 13</a></td>
-    <td><a href="mexico4.html">Day 21</a></td>
-    <td>Day 29</td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Mexico</div><div class="series-navigation-links"><a href="mexico1.html">Day 5</a><a href="mexico2.html">Day 8</a><a href="mexico3.html">Day 13</a><a href="mexico4.html">Day 21</a><span>Day 29</span></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
