--- a/site/russia/russia1.html
+++ b/site/russia/russia1.html
@@ -171,15 +171,9 @@ tired and we sleep.</p>
 <p>Pasha and American sleep almost twelve hours! American wake up and start
 writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
 связи!</p>
-<table class="series">
-  <tr><th colspan="4">Russia and Czechia</th></tr>
-  <tr>
-    <td>Day 3</td>
-    <td><a href="russia2.html">Day 4</a></td>
-    <td><a href="russia7.html">Day 7</a></td>
-    <td><a href="russia10.html">Day 10</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Russia and Czechia</div><div class="series-navigation-links"><span>Day 3</span><a href="russia2.html">Day 4</a><a href="russia7.html">Day 7</a><a href="russia10.html">Day 10</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
