--- a/site/russia/russia10.html
+++ b/site/russia/russia10.html
@@ -177,15 +177,9 @@ hilarious sausage). Next time.</p>
 <p>That's about it for my trip. I'm waiting for the plane to arrive here in
 Prague. Then it's a few hours in Warsaw, and finally the long ass flight
 back to Newark. Ahoy!</p>
-<table class="series">
-  <tr><th colspan="4">Russia and Czechia</th></tr>
-  <tr>
-    <td><a href="russia1.html">Day 3</a></td>
-    <td><a href="russia2.html">Day 4</a></td>
-    <td><a href="russia7.html">Day 7</a></td>
-    <td>Day 10</td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Russia and Czechia</div><div class="series-navigation-links"><a href="russia1.html">Day 3</a><a href="russia2.html">Day 4</a><a href="russia7.html">Day 7</a><span>Day 10</span></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
