--- a/site/russia/russia2.html
+++ b/site/russia/russia2.html
@@ -72,15 +72,9 @@ understand English). Anyway, everyone politely ignored me as I stumbled into
 nonsense, and then it was back to Russian.</p>
 <p>Today we'll probably go to a park where there are a lot of tanks. Gotta love
 tanks. Cheerio!</p>
-<table class="series">
-  <tr><th colspan="4">Russia and Czechia</th></tr>
-  <tr>
-    <td><a href="russia1.html">Day 3</a></td>
-    <td>Day 4</td>
-    <td><a href="russia7.html">Day 7</a></td>
-    <td><a href="russia10.html">Day 10</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Russia and Czechia</div><div class="series-navigation-links"><a href="russia1.html">Day 3</a><span>Day 4</span><a href="russia7.html">Day 7</a><a href="russia10.html">Day 10</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
