--- a/site/thrush.html
+++ b/site/thrush.html
@@ -182,6 +182,8 @@ auto thrush(Value&amp;&amp; value, Func&amp;&amp; func, Funcs&amp;&amp;... funcs
 <p>What about in <a href="https://golang.org/">Go</a>?  Forget it.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
