--- a/site/break-cycles/break-cycles.html
+++ b/site/break-cycles/break-cycles.html
@@ -267,6 +267,8 @@ though none very large, since the brute force solution is exponential in the
 number of edges.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
