--- a/site/callbacks.html
+++ b/site/callbacks.html
@@ -240,6 +240,8 @@ additional factory argument.</p>
 <p>If this sort of thing interests you, then take a look at <a href="/site/callbacks2.html">part 2</a>.</p>
 
 
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Callbacks</div><div class="series-navigation-links"><span>Part 1</span><a href="callbacks2.html">Part 2</a></div></div></div>
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
