--- a/site/europe/europe13.html
+++ b/site/europe/europe13.html
@@ -78,17 +78,9 @@ dusk:</p>
 <p><a href="europe13-17.jpg"><img src="europe13-17_small.jpg" alt="" /></a></p>
 <p>I have so far resisted the cesspool of disease otherwise known as Vineet,
 but we'll see how I fare waking up for work tomorrow. Ciao.</p>
-<table class="series">
-  <tr><th colspan="6">Europe</th></tr>
-  <tr>
-    <td><a href="europe1.html">Day 1</a></td>
-    <td><a href="europe2.html">Day 2</a></td>
-    <td><a href="europe7.html">Day 7</a></td>
-    <td><a href="europe8.html">Day 8</a></td>
-    <td><a href="europe10.html">Day 10</a></td>
-    <td>Day 13</td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><a href="europe2.html">Day 2</a><a href="europe7.html">Day 7</a><a href="europe8.html">Day 8</a><a href="europe10.html">Day 10</a><span>Day 13</span></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
