--- a/site/guile.html
+++ b/site/guile.html
@@ -99,6 +99,8 @@ scheme@(guile-user)&gt;
 </code></pre>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
