--- a/site/india/india1.html
+++ b/site/india/india1.html
@@ -157,17 +157,9 @@ are:</p>
 <p>At some point we ate dinner, and the food was delicious.  Now it is nearly one
 o'clock in the morning, and I am going to bed.</p>
 <p><img style="width: 200px;" src="hindi.png" /></p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td>Day 1</td>
-    <td><a href="india2.html">Day 6</a></td>
-    <td><a href="india3.html">Day 8</a></td>
-    <td><a href="india4.html">Day 10</a></td>
-    <td><a href="india5.html">Day 13</a></td>
-    <td><a href="india6.html">Day 15</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><span>Day 1</span><a href="india2.html">Day 6</a><a href="india3.html">Day 8</a><a href="india4.html">Day 10</a><a href="india5.html">Day 13</a><a href="india6.html">Day 15</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
