--- a/site/india/india2.html
+++ b/site/india/india2.html
@@ -315,17 +315,9 @@ stay on the cot from the previous night.</p>
 <p>Today is a down day.  We might do something this afternoon, and we might not.
 There is a nice pool.  Tonight is a cooking class.
 <img style="width: 200px;" src="hindi.png" /></p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td><a href="india1.html">Day 1</a></td>
-    <td>Day 6</td>
-    <td><a href="india3.html">Day 8</a></td>
-    <td><a href="india4.html">Day 10</a></td>
-    <td><a href="india5.html">Day 13</a></td>
-    <td><a href="india6.html">Day 15</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><span>Day 6</span><a href="india3.html">Day 8</a><a href="india4.html">Day 10</a><a href="india5.html">Day 13</a><a href="india6.html">Day 15</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
