--- a/site/india/india4.html
+++ b/site/india/india4.html
@@ -106,17 +106,9 @@ this is trying to tell me.</p>
 rather early tomorrow for a flight to <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, where the second half of
 this trip begins.
 <img style="width: 200px;" src="hindi.png" /></p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td><a href="india1.html">Day 1</a></td>
-    <td><a href="india2.html">Day 6</a></td>
-    <td><a href="india3.html">Day 8</a></td>
-    <td>Day 10</td>
-    <td><a href="india5.html">Day 13</a></td>
-    <td><a href="india6.html">Day 15</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><a href="india2.html">Day 6</a><a href="india3.html">Day 8</a><span>Day 10</span><a href="india5.html">Day 13</a><a href="india6.html">Day 15</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
