--- a/site/india/india6.html
+++ b/site/india/india6.html
@@ -171,17 +171,9 @@ night flights, people.</p>
 adjusting a few knobs:  fewer tours, more people;  less driving, more
 wandering;  less airport, more nature.</p>
 <p><img style="width: 200px;" src="hindi.png" /></p>
-<table class="series">
-  <tr><th colspan="6">India</th></tr>
-  <tr>
-    <td><a href="india1.html">Day 1</a></td>
-    <td><a href="india2.html">Day 6</a></td>
-    <td><a href="india3.html">Day 8</a></td>
-    <td><a href="india4.html">Day 10</a></td>
-    <td><a href="india5.html">Day 13</a></td>
-    <td>Day 15</td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><a href="india2.html">Day 6</a><a href="india3.html">Day 8</a><a href="india4.html">Day 10</a><a href="india5.html">Day 13</a><span>Day 15</span></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
