--- a/site/mexico/mexico1.html
+++ b/site/mexico/mexico1.html
@@ -74,16 +74,9 @@ recipe.  Then later we'll take a walk downtown.  Originally I planned to stay
 for a week or two, but now I'm staying for a month.  For $40 per day, where
 else would I be?  Hasta luego...</p>
 <p><a href="mexico_4.jpg"><img src="mexico_4_small.jpg" alt="" /></a></p>
-<table class="series">
-  <tr><th colspan="5">Mexico</th></tr>
-  <tr>
-    <td>Day 5</td>
-    <td><a href="mexico2.html">Day 8</a></td>
-    <td><a href="mexico3.html">Day 13</a></td>
-    <td><a href="mexico4.html">Day 21</a></td>
-    <td><a href="mexico5.html">Day 29</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Mexico</div><div class="series-navigation-links"><span>Day 5</span><a href="mexico2.html">Day 8</a><a href="mexico3.html">Day 13</a><a href="mexico4.html">Day 21</a><a href="mexico5.html">Day 29</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
