--- a/site/mexico/mexico2.html
+++ b/site/mexico/mexico2.html
@@ -80,16 +80,9 @@ listening to Grace's newly bought The Police vinyls, and then a round of
 <p>I will not run out of water.</p>
 <p><a href="mexico_18.jpg"><img src="mexico_18_small.jpg" alt="" /> </a></p>
 <p>¡Hasta la proxima vez!</p>
-<table class="series">
-  <tr><th colspan="5">Mexico</th></tr>
-  <tr>
-    <td><a href="mexico1.html">Day 5</a></td>
-    <td>Day 8</td>
-    <td><a href="mexico3.html">Day 13</a></td>
-    <td><a href="mexico4.html">Day 21</a></td>
-    <td><a href="mexico5.html">Day 29</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Mexico</div><div class="series-navigation-links"><a href="mexico1.html">Day 5</a><span>Day 8</span><a href="mexico3.html">Day 13</a><a href="mexico4.html">Day 21</a><a href="mexico5.html">Day 29</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
