--- a/site/mexico/mexico4.html
+++ b/site/mexico/mexico4.html
@@ -90,16 +90,9 @@ Irish within.  More likely, this they deemed a special occasion.  My personal
 impromptu mariachi party.  The singers had trained voices, and the trumpets
 were in tune.  Yes, they played "Cielito Lindo."  Of course they did.</p>
 <p><em>Ayyyy yaaaay yah yahhhhhhh...</em></p>
-<table class="series">
-  <tr><th colspan="5">Mexico</th></tr>
-  <tr>
-    <td><a href="mexico1.html">Day 5</a></td>
-    <td><a href="mexico2.html">Day 8</a></td>
-    <td><a href="mexico3.html">Day 13</a></td>
-    <td>Day 21</td>
-    <td><a href="mexico5.html">Day 29</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Mexico</div><div class="series-navigation-links"><a href="mexico1.html">Day 5</a><a href="mexico2.html">Day 8</a><a href="mexico3.html">Day 13</a><span>Day 21</span><a href="mexico5.html">Day 29</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
