--- a/site/phone-server.html
+++ b/site/phone-server.html
@@ -257,6 +257,8 @@ server, chewing up CPU cycles looking for possible signals in
 <p>So, hack around with your phone! It's fun, and you might learn something.</p>
 
 
+<div class="series-navigation-placeholder" />
+
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
     <a href="https://github.com/dgoffredo">About</a>
