--- a/site/russia/russia7.html
+++ b/site/russia/russia7.html
@@ -208,15 +208,9 @@ on, but I took some pictures. There were rabbits:</p>
 <p><a href="russia7-27.jpg"><img src="russia7-27_small.jpg" alt="" /></a></p>
 <p>That's enough for now. It's almost 11 PM here, and I think I ought to venture
 out in search of food before bed. Solo in Prague!</p>
-<table class="series">
-  <tr><th colspan="4">Russia and Czechia</th></tr>
-  <tr>
-    <td><a href="russia1.html">Day 3</a></td>
-    <td><a href="russia2.html">Day 4</a></td>
-    <td>Day 7</td>
-    <td><a href="russia10.html">Day 10</a></td>
-  </tr>
-</table>
+
+
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Russia and Czechia</div><div class="series-navigation-links"><a href="russia1.html">Day 3</a><a href="russia2.html">Day 4</a><span>Day 7</span><a href="russia10.html">Day 10</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
