--- a/site/thrush.html
+++ b/site/thrush.html
@@ -25,6 +25,7 @@
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -186,6 +187,7 @@ auto thrush(Value&amp;&amp; value, Func&amp;&amp; func, Funcs&amp;&amp;... funcs
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
