--- a/site/break-cycles/break-cycles.html
+++ b/site/break-cycles/break-cycles.html
@@ -25,6 +25,7 @@
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -271,6 +272,7 @@ number of edges.</p>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
