--- a/site/india/india6.html
+++ b/site/india/india6.html
@@ -25,6 +25,7 @@
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -177,6 +178,7 @@ wandering;  less airport, more nature.</p>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
