--- a/site/mexico/mexico1.html
+++ b/site/mexico/mexico1.html
@@ -25,6 +25,7 @@
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -80,6 +81,7 @@ else would I be?  Hasta luego...</p>
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
