--- a/site/phone-server.html
+++ b/site/phone-server.html
@@ -25,6 +25,7 @@
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -261,6 +262,7 @@ server, chewing up CPU cycles looking for possible signals in
 
 <div class="navigation-bar">
     <a href="/site/posts.html">Posts</a>
+    <a href="/site/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
