post about homebrewing

--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,4 @@
-guile.html
+<html>
+    <meta charset="utf-8"/>
+    <meta http-equiv="refresh" content="0;url=double-panda-ipa/double-panda-ipa.html"/>
+</html>
