publish relative to site/ (with docs/ as an alias)

--- a/site/guile.html
+++ b/site/guile.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
@@ -24,8 +24,8 @@
 <body>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -103,8 +103,8 @@ scheme@(guile-user)&gt;
 <div class="series-navigation-placeholder" />
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
