--- a/site/posts.html
+++ b/site/posts.html
@@ -6,17 +6,17 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   <!-- style for landscape orientation, e.g. desktop browser -->
   <link rel="stylesheet" type="text/css"
       media="(orientation: landscape)"
-      href="/site/landscape.css" />
+      href="/landscape.css" />
 
   <!-- style for portrait orientation, e.g. mobile browser -->
   <link rel="stylesheet" type="text/css"
       media="(orientation: portrait)"
-      href="/site/portrait.css" />
+      href="/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
@@ -31,8 +31,8 @@
 <body>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -179,8 +179,8 @@
 
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
