--- a/site/callbacks2.html
+++ b/site/callbacks2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
@@ -24,8 +24,8 @@
 <body>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -36,7 +36,7 @@
 <div class="table-of-contents"><ul><li><a href="#callbacks_part_2">Callbacks (Part 2)</a><ul><li><a href="#injecting_a_default">Injecting a Default</a></li><li><a href="#writing_the_forwarding_implementation">Writing the Forwarding Implementation</a></li></ul></li></ul></div>
 
 <h1 id="callbacks_part_2">Callbacks (Part 2)</h1>
-<p><a href="/site/callbacks.html">Previously</a> I described an API for submitting a query asynchronously
+<p><a href="callbacks.html">Previously</a> I described an API for submitting a query asynchronously
 in such a way that the caller provides the object into which the query results
 are written, but without having to specify an object factory.  It looked like
 this:</p>
@@ -192,8 +192,8 @@ inside-out bind.  Six lines of C++11 is what it is.</p>
 <div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Callbacks</div><div class="series-navigation-links"><a href="callbacks.html">Part 1</a><span>Part 2</span></div></div></div>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
