--- a/site/europe/europe13.html
+++ b/site/europe/europe13.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
@@ -24,8 +24,8 @@
 <body>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -84,8 +84,8 @@ but we'll see how I fare waking up for work tomorrow. Ciao.</p>
 <div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Europe</div><div class="series-navigation-links"><a href="europe1.html">Day 1</a><a href="europe2.html">Day 2</a><a href="europe7.html">Day 7</a><a href="europe8.html">Day 8</a><a href="europe10.html">Day 10</a><span>Day 13</span></div></div></div>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
