--- a/site/russia/russia1.html
+++ b/site/russia/russia1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="/landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="/portrait.css" />
 
   <link rel="stylesheet" href="/highlightjs/styles/default.css" />
 
@@ -24,8 +24,8 @@
 <body>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -177,8 +177,8 @@ writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
 <div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Russia and Czechia</div><div class="series-navigation-links"><span>Day 3</span><a href="russia2.html">Day 4</a><a href="russia7.html">Day 7</a><a href="russia10.html">Day 10</a></div></div></div>
 
 <div class="navigation-bar">
-    <a href="/site/posts.html">Posts</a>
-    <a href="/site/series.html">Series</a>
+    <a href="/posts.html">Posts</a>
+    <a href="/series.html">Series</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
