site build based off of commit deff51593bd392cde82227ed2c68af52e5818b0f on master branch

--- a/llama-json.html
+++ b/llama-json.html
@@ -30,7 +30,7 @@
 <div class="table-of-contents"><ul><li><a href="#llama_json">Llama JSON</a><ul><li><a href="#its_a_macro">It's a Macro</a></li><li><a href="#dealing_with_null">Dealing with null</a></li><li><a href="#distinguishing_arrays_from_objects">Distinguishing Arrays from Objects</a></li><li><a href="#empty_objects_and_arrays">Empty Objects and Arrays</a></li><li><a href="#numbers_and_jsonstringify">Numbers and JSON.stringify</a></li><li><a href="#helper_procedure">Helper Procedure</a></li><li><a href="#the_json_macro">The json Macro</a></li><li><a href="#example">Example</a></li></ul></li></ul></div>
 
 <h1 id="llama_json">Llama JSON</h1>
-<p><img src="llama.jpg" alt=""> <img src="json.gif" alt=""></p>
+<p><img src="llama.jpg" alt="" height="400"> <img src="json.gif" alt="" height="160"></p>
 <p>Playing with a <a href="https://github.com/dgoffredo/llama">pet project</a>, I noticed a relationship between
 <a href="https://en.wikipedia.org/wiki/S-expression">s-expressions</a> and <a href="https://en.wikipedia.org/wiki/JSON">JSON</a>.</p>
 <p>The following JSON is also valid <a href="https://github.com/dgoffredo/llama">Llama</a>:</p>
