--- a/europe/europe2.html
+++ b/europe/europe2.html
@@ -43,30 +43,30 @@ phone.</p>
 setting behind this sort of wall of stone, and the picture really doesn't do
 it justice. The setting sunlight painted the structures gold, LIKE THE HALLS
 OF VALHALLA!!!</p>
-<p><a href="europe2-1.jpg"><img src="europe2-1_small.jpg" alt=""></a></p>
+<p><a href="europe2-1.jpg"><img src="europe2-1_small.jpg" alt="" height="394"></a></p>
 <p>You really would need multiple exposures combined to see what it looked
 like.</p>
 <p>Anyway, strange rocks:</p>
-<p><a href="europe2-2.jpg"><img src="europe2-2_small.jpg" alt=""></a></p>
+<p><a href="europe2-2.jpg"><img src="europe2-2_small.jpg" alt="" height="1206"></a></p>
 <p>This is what Vineet looks like when he's not falling to his death:</p>
-<p><a href="europe2-3.jpg"><img src="europe2-3_small.jpg" alt=""></a></p>
+<p><a href="europe2-3.jpg"><img src="europe2-3_small.jpg" alt="" height="1172"></a></p>
 <p>Mountains in the distance to your right (where the glacier is) and the ocean
 to your left:</p>
 <p><a href="https://drive.google.com/open?id=0B6rp2WsQNNAlVzVVOTBTWjVXTW8">https://drive.google.com/open?id=0B6rp2WsQNNAlVzVVOTBTWjVXTW8</a></p>
 <p>And did I mention yesterday? No? Well that involved energy drinks,</p>
-<p><a href="europe2-4.jpg"><img src="europe2-4_small.jpg" alt=""></a></p>
+<p><a href="europe2-4.jpg"><img src="europe2-4_small.jpg" alt="" height="329"></a></p>
 <p>geothermal ejaculation,</p>
-<p><a href="europe2-5.jpg"><img src="europe2-5_small.jpg" alt="">
+<p><a href="europe2-5.jpg"><img src="europe2-5_small.jpg" alt="" height="1105">
 </a><em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>waterfalls,</p>
-<p><a href="europe2-6.jpg"><img src="europe2-6_small.jpg" alt="">
+<p><a href="europe2-6.jpg"><img src="europe2-6_small.jpg" alt="" height="291">
 </a><em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>a lake formed in a volcanic crater,</p>
-<p><a href="europe2-7.jpg"><img src="europe2-7_small.jpg" alt="">
+<p><a href="europe2-7.jpg"><img src="europe2-7_small.jpg" alt="" height="1039">
 </a><em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>and sometimes climbing to the top of a hill to sit and listen to the creek
 and look at the horses.</p>
-<p><a href="europe2-8.jpg"><img src="europe2-8_small.jpg" alt="">
+<p><a href="europe2-8.jpg"><img src="europe2-8_small.jpg" alt="" height="260">
 </a><em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>We're at a hostel-like hotel in "Hella" now after having gone to "Vik" for
 dinner. Cod stew. Tomorrow we drive over towards the airport to stay at the
@@ -74,8 +74,8 @@ Blue Lagoon, which is a spa. Maybe I'll drop 100 euros on a massage. Then
 another Airbnb near there and off to the airport Tuesday to return the car,
 and then we're LONDON BOUND.</p>
 <p>You want to see more cats? Me too:</p>
-<p><a href="europe2-9.jpg"><img src="europe2-9_small.jpg" alt=""></a></p>
-<p><a href="europe2-10.jpg"><img src="europe2-10_small.jpg" alt="">
+<p><a href="europe2-9.jpg"><img src="europe2-9_small.jpg" alt="" height="245"></a></p>
+<p><a href="europe2-10.jpg"><img src="europe2-10_small.jpg" alt="" height="234">
 </a><em>[2020 note: these pictures are cropped badly due to file corruption.]</em> <br>
 <em>[2020 note: my God, look at the cock on that one.]</em></p>
 <p>These are the true Icelanders. The humans are kept alive only to act as
