--- a/india/india3.html
+++ b/india/india3.html
@@ -30,19 +30,19 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_8">India, Day 8</a></li></ul></div>
 
 <h1 id="india_day_8">India, Day 8</h1>
-<p><a href="india3_5.jpg"><img src="india3_5_small.jpg" alt=""></a></p>
+<p><a href="india3_5.jpg"><img src="india3_5_small.jpg" alt="" height="525"></a></p>
 <p>I promised you a cow.  You know, I won't be eating them for a while.  It's just
 not right.  Well, I might have eaten some of them today.  More on that later.</p>
 <p>It wasn't just one, either.  There are at least three cows in India.  I saw one
 chewing on a newspaper from a garbage pile.  Some are employed as roadside
 landscapers.</p>
-<p><a href="india3_1.jpg"><img src="india3_1_small.jpg" alt=""></a></p>
+<p><a href="india3_1.jpg"><img src="india3_1_small.jpg" alt="" height="525"></a></p>
 <p>In the morning, we got into Mr. Singh's car for the considerable drive back to
 Delhi.  The road is farms and truck stops across the semi-arid landscape.</p>
-<p><a href="india3_2.jpg"><img src="india3_2_small.jpg" alt=""></a></p>
+<p><a href="india3_2.jpg"><img src="india3_2_small.jpg" alt="" height="525"></a></p>
 <p>Unlike in Agra, these cows have impressive horns.</p>
-<p><a href="india3_6.jpg"><img src="india3_6_small.jpg" alt=""></a></p>
-<p><a href="legend.jpg"><img src="legend_small.jpg" alt=""></a></p>
+<p><a href="india3_6.jpg"><img src="india3_6_small.jpg" alt="" height="525"></a></p>
+<p><a href="legend.jpg"><img src="legend_small.jpg" alt="" height="297"></a></p>
 <p>At the halfway point, we stopped at a roadside hotel with an attached café.
 The owner (the man was, as I later found out) has a family member in tech at
 Morgan Stanley, and his son is studying "big data" in Kerala.  Andrea had chai
@@ -56,7 +56,7 @@ professionals we met on our tour have done this a million times and know
 what gets a good response from us the customers.  On the other hand, I
 sometimes thought we were a resource being passed through a quiet network of
 receivers.</p>
-<p><a href="india3_7.jpg"><img src="india3_7_small.jpg" alt=""></a></p>
+<p><a href="india3_7.jpg"><img src="india3_7_small.jpg" alt="" height="525"></a></p>
 <p>We got back to Delhi just in time, as my bladder was about to explode.
 They gave us a room with two beds.  They had guilty looks on their faces and
 upgraded us to a larger room, with a refrigerator.  Serves them right.  Finally
@@ -65,7 +65,7 @@ somewhere to put the cheap champagne that Mr. Singh gifted us.</p>
 alcohol by volume, is probably derived from grapes, and contains carbon
 dioxide, but aside from these things it more resembles fortified Kool-Aid.  I
 will drink it.</p>
-<p><a href="india3_18.jpg"><img src="india3_18_small.jpg" alt=""></a></p>
+<p><a href="india3_18.jpg"><img src="india3_18_small.jpg" alt="" height="525"></a></p>
 <p>At 4:30 we were back in the car on our way to a walking tour of
 <a href="https://en.wikipedia.org/wiki/Old_Delhi">Old Delhi's</a> street foods.  Our guide was an adorable college student from
 Bangladesh or a nearby Indian territory.  She's studying creative writing.  She
@@ -75,7 +75,7 @@ so fast and rough that she has yet to find somebody who can hang with her.</p>
 <p>We ate a lot of food.  Andrea and I skipped lunch, but it didn't seem to help.</p>
 <p>I'm not moved by food.  That's not to say I don't enjoy good food, which it all
 was.  It's just that I have trouble focusing on food.</p>
-<p><a href="india3_15.jpg"><img src="india3_15_small.jpg" alt=""></a></p>
+<p><a href="india3_15.jpg"><img src="india3_15_small.jpg" alt="" height="525"></a></p>
 <p>That being said, we sampled quite the spread as we squeezed through the crowded
 streets of Old Delhi, sometimes hopping on a rickshaw to reach another
 neighborhood.  We had:</p>
@@ -108,15 +108,15 @@ didn't manage a good photo.</li>
 office than an ice cream shop.  Andrea liked the fruit flavors, whereas I
 think I preferred the nuts.</li>
 </ul>
-<p><a href="india3_25.jpg"><img src="india3_25_small.jpg" alt=""></a></p>
-<p><a href="india3_23.jpg"><img src="india3_23_small.jpg" alt=""></a></p>
+<p><a href="india3_25.jpg"><img src="india3_25_small.jpg" alt="" height="525"></a></p>
+<p><a href="india3_23.jpg"><img src="india3_23_small.jpg" alt="" height="933"></a></p>
 <p>We began with another Sikh temple, and along the way there was a quiet street
 of Jain households.  After kulfi we rickshawed back to the car, where our guide
 seemed oddly interested in keeping far away from our driver.</p>
 <p>So ended the street food walking tour.</p>
 <p>On the way back, we stopped to get some cash for tipping Mr. Singh, as it would
 be our last drive with him.</p>
-<p><a href="india3_26.jpg"><img src="india3_26_small.jpg" alt=""></a></p>
+<p><a href="india3_26.jpg"><img src="india3_26_small.jpg" alt="" height="525"></a></p>
 <p>Thanks for the jungle juice.</p>
 
 
