--- a/india/india6.html
+++ b/india/india6.html
@@ -31,22 +31,22 @@
 
 <h1 id="india_day_15">India, Day 15</h1>
 <p>They have Jesus in Kerala.</p>
-<p><a href="india6_66.jpg"><img src="india6_66_small.jpg" alt=""></a></p>
+<p><a href="india6_66.jpg"><img src="india6_66_small.jpg" alt="" height="525"></a></p>
 <p>Christianity, Islam, and Hinduism simmer together in the region like mismatched
 spices in some yogurt dish.  There's even a synagogue.  And a bronze chicken.</p>
-<p><a href="india6_50.jpg"><img src="india6_50_small.jpg" alt=""></a></p>
+<p><a href="india6_50.jpg"><img src="india6_50_small.jpg" alt="" height="933"></a></p>
 <p>For comparison, here are real chickens.</p>
-<p><a href="india6_17.jpg"><img src="india6_17_small.jpg" alt=""></a></p>
+<p><a href="india6_17.jpg"><img src="india6_17_small.jpg" alt="" height="525"></a></p>
 <p>We began our long descent from the mountains at eight o'clock.  Arun insisted
 that we be ready to go by seven, which we were.  With eight milligrams of
 loperamide in my stomach, I was a rock, a clogged sink.</p>
-<p><a href="india6_1.jpg"><img src="india6_1_small.jpg" alt=""></a></p>
+<p><a href="india6_1.jpg"><img src="india6_1_small.jpg" alt="" height="525"></a></p>
 <p>Arun didn't read into Vineet's regular requests to turn down the music, but
 I didn't mind.  It was like a cooking show travel montage.</p>
 <p>We stopped for breakfast in a homey outdoor cafe.  I ordered the smallest thing
 on the menu.</p>
-<p><a href="india6_2.jpg"><img src="india6_2_small.jpg" alt=""></a></p>
-<p><a href="hat.jpg"><img src="hat_small.jpg" alt=""></a></p>
+<p><a href="india6_2.jpg"><img src="india6_2_small.jpg" alt="" height="525"></a></p>
+<p><a href="hat.jpg"><img src="hat_small.jpg" alt="" height="933"></a></p>
 <p>I liked the place.  Also, I found myself liking the people in Kerala generally.
 It was probably because they were not yelling at me to give them money.  Or
 maybe they're better looking.  The cashier girl at the airport KFC just would
@@ -54,9 +54,9 @@ not stop smiling.</p>
 <p>Have you ever wondered how to tell if a restaurant is classy?  I've developed
 a diagnostic that you can use.  If there is a sign in the bathroom forbidding
 vomiting in the sink, then the restaurant has at least two Michelin stars.</p>
-<p><a href="india6_3.jpg"><img src="india6_3_small.jpg" alt=""></a></p>
+<p><a href="india6_3.jpg"><img src="india6_3_small.jpg" alt="" height="933"></a></p>
 <p>My pancake volcano caused no discomfort.</p>
-<p><a href="india6_4.jpg"><img src="india6_4_small.jpg" alt=""></a></p>
+<p><a href="india6_4.jpg"><img src="india6_4_small.jpg" alt="" height="525"></a></p>
 <p>Car hopping from place to place to see the sights worked for Delhi, Agra, and
 Jaipur.  In Kerala, however, it seemed excessive.  Aside from sleeping at
 night, we spent by far the most of our time in the car going somewhere or the
@@ -67,65 +67,65 @@ with Bollywood blaring, it had its own charm.</p>
 <p>The better way to do Kerala is slowly.  Our hotel offered complimentary
 bicycles.  There are interesting flowers and critters everywhere.  It's quiet.</p>
 <p>Things finally slowed down when we reached the <a href="https://en.wikipedia.org/wiki/Kerala_backwaters">backwaters</a> of Alleppey.</p>
-<p><a href="india6_5.jpg"><img src="india6_5_small.jpg" alt=""></a></p>
+<p><a href="india6_5.jpg"><img src="india6_5_small.jpg" alt="" height="525"></a></p>
 <p>There we boarded a big ol' houseboat just for us six and the three crew.</p>
-<p><a href="india6_14.jpg"><img src="india6_14_small.jpg" alt=""></a></p>
+<p><a href="india6_14.jpg"><img src="india6_14_small.jpg" alt="" height="525"></a></p>
 <p>There was a helmsman,</p>
-<p><a href="india6_7.jpg"><img src="india6_7_small.jpg" alt=""></a></p>
+<p><a href="india6_7.jpg"><img src="india6_7_small.jpg" alt="" height="525"></a></p>
 <p>a cook,</p>
-<p><a href="india6_39.jpg"><img src="india6_39_small.jpg" alt=""></a></p>
+<p><a href="india6_39.jpg"><img src="india6_39_small.jpg" alt="" height="525"></a></p>
 <p>and one other crew member who I didn't see much of.</p>
 <p>Here is a small diaspora of Australians.  From left to right it's Shaun,
 Janice, and Kho Yin, who they call Kho.</p>
-<p><a href="india6_12.jpg"><img src="india6_12_small.jpg" alt=""></a></p>
+<p><a href="india6_12.jpg"><img src="india6_12_small.jpg" alt="" height="525"></a></p>
 <p>When not wrestling crocodiles or boxing kangaroos, some Australians do yoga.</p>
-<p><a href="india6_13.jpg"><img src="india6_13_small.jpg" alt=""></a></p>
+<p><a href="india6_13.jpg"><img src="india6_13_small.jpg" alt="" height="525"></a></p>
 <p>The houseboat cruises down the river, and everybody just hangs out.  Later that
 evening we played charades on the upper deck.</p>
 <p>Before dinner, we stopped at the shore of the river to take a walk and see the
 sunset across a rice field.</p>
-<p><a href="india6_15.jpg"><img src="india6_15_small.jpg" alt=""></a></p>
-<p><a href="india6_20.jpg"><img src="india6_20_small.jpg" alt=""></a></p>
-<p><a href="india6_19.jpg"><img src="india6_19_small.jpg" alt=""></a></p>
+<p><a href="india6_15.jpg"><img src="india6_15_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_20.jpg"><img src="india6_20_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_19.jpg"><img src="india6_19_small.jpg" alt="" height="525"></a></p>
 <p>The cook prepared excellent food for us.  It was "home style" Kerala cooking,
 rather than the restaurant buffet northern Indian food we had been inundated
 with until that point.  He would occasionally bring out coconuts for us to
 drink from, or pineapple slices, and plenty of masala chai.</p>
-<p><a href="food.jpg"><img src="food_small.jpg" alt=""></a></p>
+<p><a href="food.jpg"><img src="food_small.jpg" alt="" height="933"></a></p>
 <p>I think Janice took that photo.</p>
 <p>While we were charading upstairs, a crew member discreetly turned on the air
 conditioners in each of our rooms, so that when we retired at ten o'clock,
 our beds were comfortably cool.</p>
 <p>I woke up early, but not as early as the crows.  Morning on the river is for
 the crows.  I observed them from the upper deck until the Australians arose.</p>
-<p><a href="india6_26.jpg"><img src="india6_26_small.jpg" alt=""></a></p>
-<p><a href="india6_27.jpg"><img src="india6_27_small.jpg" alt=""></a></p>
-<p><a href="india6_28.jpg"><img src="india6_28_small.jpg" alt=""></a></p>
+<p><a href="india6_26.jpg"><img src="india6_26_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_27.jpg"><img src="india6_27_small.jpg" alt="" height="933"></a></p>
+<p><a href="india6_28.jpg"><img src="india6_28_small.jpg" alt="" height="525"></a></p>
 <p>Without a beast in sight for wrestling, more yoga was sought as a substitute.</p>
-<p><a href="india6_29.jpg"><img src="india6_29_small.jpg" alt=""></a></p>
+<p><a href="india6_29.jpg"><img src="india6_29_small.jpg" alt="" height="525"></a></p>
 <p>The rest of the morning was another leisurely cruise down the river, until we
 once again reached the shore and were picked up by our driver.</p>
-<p><a href="india6_32.jpg"><img src="india6_32_small.jpg" alt=""></a></p>
+<p><a href="india6_32.jpg"><img src="india6_32_small.jpg" alt="" height="525"></a></p>
 <p>It's a couple hours' drive back to Kochi, where the airport is, but we had more
 time to kill, so on our last day in Kerala we did some more sightseeing.  This
 included a very full museum of <em>stuff</em> including prehistoric cutting tools,
 nude portraits, bronze chickens, life-sized crucified Jesuses, and a pantheon
 of Hindu gods carved into an ornate wooden ceiling.</p>
-<p><a href="india6_47.jpg"><img src="india6_47_small.jpg" alt=""></a></p>
-<p><a href="india6_45.jpg"><img src="india6_45_small.jpg" alt=""></a></p>
-<p><a href="india6_44.jpg"><img src="india6_44_small.jpg" alt=""></a></p>
+<p><a href="india6_47.jpg"><img src="india6_47_small.jpg" alt="" height="933"></a></p>
+<p><a href="india6_45.jpg"><img src="india6_45_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_44.jpg"><img src="india6_44_small.jpg" alt="" height="525"></a></p>
 <p>Then we went to a fishery where nets are lowered into the water on giant
 levers.  After a couple of minutes, the lever is pulled upright again, and
 the resulting catch hangs in the net just above the water.  Or, as was the case
 demonstrated to us, nothing ends up in the net just above the water.  Fishing
 season is not until later in the year.</p>
 <p>These are called Chinese fishing nets.</p>
-<p><a href="india6_55.jpg"><img src="india6_55_small.jpg" alt=""></a></p>
-<p><a href="india6_54.jpg"><img src="india6_54_small.jpg" alt=""></a></p>
-<p><a href="india6_56.jpg"><img src="india6_56_small.jpg" alt=""></a></p>
+<p><a href="india6_55.jpg"><img src="india6_55_small.jpg" alt="" height="933"></a></p>
+<p><a href="india6_54.jpg"><img src="india6_54_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_56.jpg"><img src="india6_56_small.jpg" alt="" height="933"></a></p>
 <p>We then stopped by God's house to say hello.</p>
-<p><a href="india6_63.jpg"><img src="india6_63_small.jpg" alt=""></a></p>
-<p><a href="india6_64.jpg"><img src="india6_64_small.jpg" alt=""></a></p>
+<p><a href="india6_63.jpg"><img src="india6_63_small.jpg" alt="" height="525"></a></p>
+<p><a href="india6_64.jpg"><img src="india6_64_small.jpg" alt="" height="525"></a></p>
 <p>No photography inside God's house.  I recognized all but one of the depictions
 inside.  There was of course our boy J-Unit, his mom, his baptism by John,
 etc., etc., but also there was this Hindu-looking guy on a horse.  I didn't
@@ -133,7 +133,7 @@ learn about him in school.  Dude on a horse, in a church.  He was depicted in
 both the smaller old chapel and in the cavernous new one.</p>
 <p>Our last stop was a very fancy shopping mall.  I had chicken fried rice and
 Vineet got some new kicks.</p>
-<p><a href="india6_67.jpg"><img src="india6_67_small.jpg" alt=""></a></p>
+<p><a href="india6_67.jpg"><img src="india6_67_small.jpg" alt="" height="525"></a></p>
 <p>After the mall, Arun dropped us off at the airport so we could catch a direct
 flight back to Delhi.  I cabbed with Asha and Vineet, since I would stay the
 night at a hotel near where they're staying, or so we thought.  We accidentally
@@ -149,7 +149,7 @@ television and into the cable box.  Using his trunk as a tiny siphon, the
 elephant carefully moved the puddle into a drinking glass, and then, bending
 forward like a beast of burden, pushed the glass with his head until it was
 positioned below the leak.</p>
-<p><a href="india6_68.jpg"><img src="india6_68_small.jpg" alt=""></a></p>
+<p><a href="india6_68.jpg"><img src="india6_68_small.jpg" alt="" height="933"></a></p>
 <p>I showered and then went down to have the complimentary breakfast, which was
 fine.  There was a man with his two kids, and then later two Indian business
 travelers came in speaking English.</p>
@@ -165,7 +165,7 @@ night flights, people.</p>
 <p>That's it for my first India trip.  I think I'll return someday, next time
 adjusting a few knobs:  fewer tours, more people;  less driving, more
 wandering;  less airport, more nature.</p>
-<p><img style="width: 200px;" src="hindi.png"></p>
+<p><img style="width: 200px;" src="hindi.png" height="55"></p>
 
 
 <div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">India</div><div class="series-navigation-links"><a href="india1.html">Day 1</a><a href="india2.html">Day 6</a><a href="india3.html">Day 8</a><a href="india4.html">Day 10</a><a href="india5.html">Day 13</a><span>Day 15</span></div></div></div>
